--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
   </head>
   <body>
-    <div class="conteiner-fluid bg-primary" >
+    <div class="conteiner-fluid bg-primary rounded border border-muted" >
         <div class="row p-2 align-items-center">
             <div class="col text-white">Matias Mariano Ambrosi</div>
             <a class="col-1 text-white" href="">Instagram</a>
@@ -19,7 +19,7 @@
         </div>
     </div>
 
-    <div class="conteiner-fluid bg-dark">
+    <div class="conteiner-fluid bg-dark rounded border border-muted">
       <img src="./images/banner.png" alt="Banner" class="row w-50 mx-auto d-block" >
       <div class="row bg-white p-2 align-items-center">
         <div class="col text-start"><h3>Matias Mariano Ambrosi</h3>
@@ -35,8 +35,9 @@
       </div>
     </div>
 
-    <div class="acerca-de">
-
+    <div class="conteiner-fluid rounded border border-muted">
+      <h3 class="row ms-2">Acerca de</h3>
+      <div class="row ms-2 text-start">Full Stack Developer Jr, estudiante de Ingenieria Industrial, apasionado por la tecnologia.</div>
     </div>
 
     <div class="experience">
