--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
   </head>
   <body>
-    <div class="conteiner-fluid bg-primary rounded border border-muted" >
+    <div class="header conteiner-fluid bg-primary" >
         <div class="row p-2 align-items-center">
             <div class="col text-white">Matias Mariano Ambrosi</div>
             <a class="col-1 text-white" href="">Instagram</a>
@@ -19,9 +19,10 @@
         </div>
     </div>
 
-    <div class="conteiner-fluid bg-dark rounded border border-muted">
+    <div class="banner conteiner-fluid bg-dark rounded border border-muted">
       <img src="./images/banner.png" alt="Banner" class="row w-50 mx-auto d-block" >
-      <div class="row bg-white p-2 align-items-center">
+      <!--<img src="./images/profile.jpg" class="profile" style="height:150px; width:auto;">-->
+      <div class="cont2 row p-2 align-items-center">
         <div class="col text-start"><h3>Matias Mariano Ambrosi</h3>
         <p>Full Stack Developer Jr</p>
         <p>Cordoba, Argentina <a href="#">Contacto</a></p>
@@ -35,16 +36,32 @@
       </div>
     </div>
 
-    <div class="conteiner-fluid rounded border border-muted">
+    <div class="cont3 conteiner-fluid rounded border border-muted">
       <h3 class="row ms-2">Acerca de</h3>
       <div class="row ms-2 text-start">Full Stack Developer Jr, estudiante de Ingenieria Industrial, apasionado por la tecnologia.</div>
     </div>
 
-    <div class="experience">
-
+    <div class="experience container-fluid rounded border border-muted">
+      <h3 class="">Experiencia</h3>
+      <div class="">
+        <ul>
+          <li>Content moderator for Olapic from 2016-2022</li>
+          <li>ITO Service Delivery consultant for DXC Technology from 2022</li>
+        </ul>
+      </div>
+      <h3 class="">Educacion</h3>
+      <div class="row align-items-center p-2">
+        <img src="./images/fcefyn.png" alt="logo universidad de cordoba" class="col-2 pb-2" style="height:50px; width:auto;">
+        <div class="col"><h5>UNC</h5>Estudiante de Ingenieria Industrial en la Universidad Nacional de Cordoba</div>
+      </div>
+      <div class="row align-items-center p-2">
+        <img class='col-2'src="./images/banner.png" alt="logo argentina programa" style="height:60px; width:auto;">
+        <div class="col"><h5>Argentina Programa</h5>Full Stack Developer Jr</div>
+      </div>
     </div>
 
-    <div class="skills">
+    <div class="skills conteiner-fluid rounded border border-muted">
+      <div class=""><h3>Hard & Soft Skills</h3></div>
 
     </div>
 
