--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
   </head>
   <body>
+
+<!--Header container-->
+
     <div class="header conteiner-fluid bg-primary" >
         <div class="row p-2 align-items-center">
             <div class="col text-white">Matias Mariano Ambrosi</div>
@@ -19,16 +22,22 @@
         </div>
     </div>
 
-    <div class="banner conteiner-fluid bg-dark rounded border border-muted">
+<!--Banner Container-->
+
+    <div class="banner conteiner-fluid bg-dark rounded border border-muted p-3">
       <img src="./images/banner.png" alt="Banner" class="row w-50 mx-auto d-block" >
       <!--<img src="./images/profile.jpg" class="profile" style="height:150px; width:auto;">-->
-      <div class="cont2 row p-2 align-items-center">
-        <div class="col text-start"><h3>Matias Mariano Ambrosi</h3>
-        <p>Full Stack Developer Jr</p>
-        <p>Cordoba, Argentina <a href="#">Contacto</a></p>
-        <button type="button" class="btn-sm btn-primary">Intereses</button>
-        <button type='button' class="btn-sm btn-light">Anadir Seccion</button>
-        <button type='button' class="btn-sm btn-light">Mas</button>
+    </div>
+      
+    <div>
+      <div class="cont2 row align-items-center p-3">
+        <div class="col text-start">
+          <h3>Matias Mariano Ambrosi</h3>
+          <div class="">Full Stack Developer Jr</div>
+          <div class="">Cordoba, Argentina <button href="#" type="button" class="btn btn-sm">Contacto</button></div>
+          <button type="button" class="btn-sm btn-primary">Intereses</button>
+          <button type='button' class="btn-sm btn-light">Anadir Seccion</button>
+          <button type='button' class="btn-sm btn-light">Mas</button>
         </div>
         <div class="col">
           <img src="./images/logo.png" alt="Logo" class="rounded float-end">
@@ -36,37 +45,49 @@
       </div>
     </div>
 
-    <div class="cont3 conteiner-fluid rounded border border-muted">
-      <h3 class="row ms-2">Acerca de</h3>
-      <div class="row ms-2 text-start">Full Stack Developer Jr, estudiante de Ingenieria Industrial, apasionado por la tecnologia.</div>
+<!--About container-->
+<!--Agregar collapse a todas las secciones para hacer la pagina mas compacta-->
+
+    <div class="cont3 conteiner-fluid rounded border border-muted p-3">
+      <h3 class="">Acerca de</h3>
+      <div class="">Full Stack Developer Jr, estudiante de Ingenieria Industrial, apasionado por la tecnologia.</div>
     </div>
 
-    <div class="experience container-fluid rounded border border-muted">
+<!-- Experience and education container -->
+<!--Posible hacerlas en formas de tarjetas para que quede mas lindo-->
+
+    <div class="experience container-fluid rounded border border-muted p-3">
       <h3 class="">Experiencia</h3>
-      <div class="">
-        <ul>
-          <li>Content moderator for Olapic from 2016-2022</li>
-          <li>ITO Service Delivery consultant for DXC Technology from 2022</li>
-        </ul>
+      <div class="row align-items-center">
+        <img class='logos col-1' src="./images/logo-olapic.png">
+        <div class="col">Content moderator for Olapic from 2016-2022</div>
+      </div>
+      <div class="row align-items-center">
+        <img class='logos col-1' src="./images/dxc.png">
+        <div class="col">ITO Service Delivery consultant for DXC Technology from 2022</div>
       </div>
       <h3 class="">Educacion</h3>
-      <div class="row align-items-center p-2">
-        <img src="./images/fcefyn.png" alt="logo universidad de cordoba" class="col-2 pb-2" style="height:50px; width:auto;">
+      <div class="row align-items-center">
+        <img src="./images/fcefyn.png" alt="logo universidad de cordoba" class="logos col-1">
         <div class="col"><h5>UNC</h5>Estudiante de Ingenieria Industrial en la Universidad Nacional de Cordoba</div>
       </div>
-      <div class="row align-items-center p-2">
-        <img class='col-2'src="./images/banner.png" alt="logo argentina programa" style="height:60px; width:auto;">
+      <div class="row align-items-center">
+        <img class='logos col-1'src="./images/banner.png" alt="logo argentina programa">
         <div class="col"><h5>Argentina Programa</h5>Full Stack Developer Jr</div>
       </div>
     </div>
 
-    <div class="skills conteiner-fluid rounded border border-muted">
+<!--Skills container-->
+
+    <div class="skills conteiner-fluid rounded border border-muted p-3">
       <div class=""><h3>Hard & Soft Skills</h3></div>
 
     </div>
 
-    <div class="projects">
-
+<!--Projects container-->
+    
+    <div class="projects container-fluid rounded border border-muted p-3">
+      <h3>Proyectos</h3>
     </div>
 
     <div class="footer">
