--- a/index.html
+++ b/index.html
@@ -18,7 +18,35 @@
             <div class="col text-white">Matias Mariano Ambrosi</div>
             <a class="col-1 text-white" href="">Instagram</a>
             <a class='col-1 text-white' href="">LinkedIn</a>
-            <button type='button' class="col-1 btn-dark me-2">Login</button>
+
+            <!--Modal atempt-->
+            <button type='button' class="col-1 btn-sm btn-dark me-2" data-bs-toggle="modal" data-bs-target="#login">Login</button>
+            <!--Modal card-->
+            <div class="modal fade" id="login">
+              <div class="modal-dialog modal-dialog-centered">
+                <div class="modal-content">
+
+                  <!--Modal Header-->
+                  <div class="modal-header">
+                    <h3 class="modal-title">Login</h3>
+                    <button type="button" class="btn-sm btn-close" data-bs-dismiss="modal"></button>
+                  </div>
+
+                  <!--Modal body-->
+                  <div class="modal-body">
+                    <div><h5>Username</h5></div>
+                    <div><h5>Password</h5></div>
+                  </div>
+
+                    <!--Modal footer-->
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Enter</button>
+                  </div>
+
+                </div>
+                </div>
+              </div>
+            </div>
         </div>
     </div>
 
