--- a/index.html
+++ b/index.html
@@ -34,8 +34,20 @@
 
                   <!--Modal body-->
                   <div class="modal-body">
-                    <div><h5>Username</h5></div>
-                    <div><h5>Password</h5></div>
+                    <form action="">
+                      <div class="form-floating mb-2">
+                        <input type="text" class="form-control" id="user" placeholder="Enter your username" name="Username">
+                        <label for="user">Username</label>
+                      </div>
+                      <div class="form-floating mb-2">
+                        <input type="text" class="form-control" id="password" placeholder='Password' name="Password">
+                        <label for="password">Password</label>
+                      </div>
+                      <div class="form-check">
+                        <input class="form-check-input" type="checkbox" id="rememberme" name="rememberme" unchecked>
+                        <label for="rememberme">Remember me</label>
+                      </div>
+                    </form>
                   </div>
 
                     <!--Modal footer-->
