final static touches

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
 <!--Header container-->
 
-    <div class="header conteiner-fluid bsg-primary" >
-        <div class="row p-2 align-items-center">
+    <div class="header conteiner-fluid" >
+        <div class="row p-2 d-flex align-items-center flex-nowrap">
             <div class="col text-white"><img src="./images/profile.jpg" class="profilePic">Matias Mariano Ambrosi</div>
               <div class="col-1">
                 <a class="text-white p-1" href="mailto:matiambrosi@gmail.com"><i class="far fa-envelope-open fa-xl"></i></a>
@@ -82,7 +82,7 @@
           <h3>Matias Mariano Ambrosi</h3>
           <div class="">Full Stack Developer Jr</div>
           <div class="">Cordoba, Argentina <button href="#" type="button" class="btn btn-sm">Contacto</button></div>
-          <button type="button" class="btn-sm btn-primary">Intereses</button>
+          <button type="button" class="intrestbtn btn-sm">Intereses</button>
           <button type='button' class="btn-sm btn-light">Anadir Seccion</button>
           <button type='button' class="btn-sm btn-light">Mas</button>
         </div>
@@ -105,15 +105,18 @@
 
     <div class="experience container-fluid rounded border border-muted p-3">
       <h3 class="">Experiencia</h3>
-      <div class="row justify-content-between">
-        <div class="ola card p-2" style="width: 300px;">
+      <div class="row d-flex justify-content-center">
+        <div class="col-2"></div>
+        <div class="ola col-3 card bg-light border-dark p-2" style="width: 250px;">
           <div class="card-img-top"><img class='logos-exp mx-auto d-block' src="./images/logo-olapic.png"></div>
           <div class="card-body">Content moderator for Olapic from 2016-2022</div>        
         </div>
-        <div class="dxc card p-2" style="width: 300px;">
+        <div class="col-2"></div>
+        <div class="dxc col-3 card bg-light border-dark p-2" style="width: 250px;">
           <div class="card-img-top"><img class='logos-exp mx-auto d-block' src="./images/dxc.png"></div>
           <div class="card-body">ITO Service Delivery consultant for DXC Technology since January 2022</div>
         </div>
+        <div class="col-2"></div>
       </div>
       <!--<div class="row align-items-center">
         <img class='logos col-1' src="./images/logo-olapic.png">
@@ -154,8 +157,8 @@
       <h3>Proyectos</h3>
     </div>
 
-    <div class="footer">
-
+    <div class="footer container-fluid d-flex justify-content-center align-items-center">
+      <div class="">Thank you for visiting!</div>
     </div>
 
   </body>
